# gwisp

./: .gitignore  LICENSE  README.md  SECURITY.md  SUPPORT.md  config.example.json  pyproject.toml  requirements.txt  run_gwisp.py  run_gwisp_sync_ocr.py
downloads/: Gwisp-Setup.README.txt  SHA256SUMS.txt
packaging/windows/: Build-ReleaseZips.ps1  Build-WindowsInstaller.ps1  Install-Gwisp-Main.ps1  Install-Gwisp-SyncOCR.ps1  README-Gwisp-Main.txt  README-Gwisp-Setup.txt  README-Gwisp-SyncOCR.txt
packaging/windows/bootstrapper/: GwispSetup.cs
src/gwisp/: config.py  i18n.py  main.py  support.py
src/gwisp/adapters/: app_event_log.py  llm_clients.py  llm_ollama.py  log_store.py  ocr_tesseract.py  screen_mss.py  sync_capture.py  window_capture.py
src/gwisp/domain/: models.py  ports.py
src/gwisp/services/: duplicate_detector.py  prompts.py  qa_pipeline.py  text_cleaner.py
src/gwisp/ui/: pyside_app.py  support_dialog.py  sync_ocr_app.py
tests/: test_app_event_log.py  test_duplicate_detector.py  test_i18n.py  test_ollama_client.py  test_pyside_app.py  test_qa_pipeline.py  test_support_dialog.py  test_sync_capture.py  test_sync_ocr_app.py  test_text_cleaner.py
